# nto-aerospace-2023

./: .gitattributes  .gitignore  Alpha.FCStd
capybara/: Cargo.toml  flake.nix  radioppp.sh  robotppp.sh  socat.sh
capybara/.cargo/: config.toml
capybara/crates/autopilot/: Cargo.toml
capybara/crates/autopilot/src/: main.rs
capybara/crates/camera/: Cargo.toml
capybara/crates/camera/src/: lib.rs
capybara/crates/common/: Cargo.toml
capybara/crates/common/src/: lib.rs
capybara/crates/control/: Cargo.toml
capybara/crates/control/src/: main.rs
capybara/crates/decoder/: Cargo.toml
capybara/crates/decoder/src/: lib.rs  yuvrgb.rs
capybara/crates/encoder/: Cargo.toml
capybara/crates/encoder/src/: lib.rs
capybara/crates/muskrat/: Cargo.toml
capybara/crates/muskrat/src/: lib.rs  servo.rs
capybara/crates/photosaver/: Cargo.toml
capybara/crates/phototaker/: Cargo.toml
capybara/crates/proto/: Cargo.toml
capybara/crates/proto/src/: lib.rs
capybara/crates/radio/: Cargo.toml
capybara/crates/radio/src/: lib.rs
capybara/crates/radiows/: Cargo.toml
capybara/crates/radiows/src/: main.rs
capybara/crates/rc/: Cargo.toml
capybara/crates/rc/src/: lib.rs
capybara/crates/rchost/: Cargo.toml
capybara/crates/rchost/src/: main.rs
capybara/crates/ros/: Cargo.toml
capybara/crates/ros/src/: lib.rs
capybara/crates/setradio/: Cargo.toml
capybara/crates/setradio/src/: main.rs
capybara/crates/ws/: Cargo.toml
capybara/src/: camera.rs  decoder.rs  encoder.rs  lib.rs  main.rs  muskrat.rs  photosaver.rs  phototaker.rs  radio.rs  ros.rs  servo.rs  ws.rs  yuvrgb.rs
hardware/: tests.odt
hardware/instructions/: .gitignore
hardware/models/: CameraHolder.dxf  ServoHolderRetainer.dxf  TopPanel.dxf
hardware/source/: partslist.odt
hardware/test_servo_buttons/: test_servo_buttons.ino
instructions/: instructions.tex
models/: Claw.dxf  ServoHolder.dxf
muskrat/: monitor.sh  muskrat.ino  setup.sh  upload.sh
ros-x11docker/: Dockerfile  build.sh  run.sh  wall.launch  wall.world
sketches/controller/: controller.ino
sketches/test_servo_buttons/: test_servo_buttons.ino
