[package]
name = "capybara"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
dav1d = "0.9.3"
dcv-color-primitives = "0.5.2"
futures = "0.3"
image = "0.23"
log = "0.4"
rav1e = "0.6.3"
rscam = "0.5.5"
tokio = { version = "1.26", features = ["full"] }
yuv = "0.1.5"

[profile.release]
lto = true
