[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.10", features = ["dynamic_linking"] }
borsh = "0.10"
futures = "0.3"
image = { version = "0.24", features = ["webp-encoder"] }
tokio = { version = "1.26", features = ["full"] }
tokio-tungstenite = "0.18"

decoder = { path = "../decoder" }
photosaver = { path = "../photosaver" }
proto = { path = "../proto" }
