[package]
name = "rc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
borsh = "0.10"
image = "0.24"
log = "0.4"
tokio = { version = "1.26", features = ["full"] }

common = { path = "../common" }
encoder = { path = "../encoder" }
proto = { path = "../proto" }
phototaker = { path = "../phototaker" }
