[package]
name = "ros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.26", features = ["full"] }

rosrust = { git = "https://github.com/adnanademovic/rosrust.git" }
rosrust_msg = { git = "https://github.com/adnanademovic/rosrust.git" }

proto = { path = "../proto" }
